fixed the stuck slider bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,12 @@ main {
   justify-content: space-evenly;
   align-items: center;
 
+  h1 {
+    color: #6f728f;
+  }
+
   p {
+    color: hsl(234, 14%, 74%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,15 +38,11 @@ main {
     opacity: 0;
     width: 0;
     height: 0;
-    
-    &:focus + .slider {
-      box-shadow: 0 0 1px #2196F3;
 
-      &:before {
-        -webkit-transform: translateX(1.625rem);
-        -ms-transform: translateX(1.625rem);
-        transform: translateX(1.625rem);
-      }
+    &:checked + .slider:before {
+      -webkit-transform: translateX(1.625rem);
+      -ms-transform: translateX(1.625rem);
+      transform: translateX(1.625rem);
     }
   }
 }
@@ -54,9 +55,13 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(90deg, hsl(236, 72%, 79%) 0%, hsl(237, 63%, 64%) 100%);
-  -webkit-transition: .4s;
-  transition: .4s;
+  background: linear-gradient(
+    90deg,
+    hsl(236, 72%, 79%) 0%,
+    hsl(237, 63%, 64%) 100%
+  );
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 
   &:before {
     position: absolute;
@@ -66,8 +71,8 @@ main {
     left: 0.25rem;
     bottom: 0.25rem;
     background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
   }
 
   /* Rounded sliders */
@@ -79,4 +84,3 @@ main {
     }
   }
 }
-
